2006-10-24  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-switcher.c: Removed shutdown_ind DBus
	  signal handler and widget signal
	* hildon-navigator/{hn-wm.c,hn-wm-memory.[ch]}: Removed
	  hn_wm_shutdown callback
	Fixes: NB#43779

2006-10-23  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.98

2006-10-23  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/background-manager.c: Remove the cache file
	  before trying to build a new one, so we rebuild the cache
	  when interupted

2006-10-23  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-menu-item.c: Make a copy of
	  the pixbuf to avoid modifying the cached icon

2006-12-23  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/hildon-navigator-window.c:
	* hildon-navigator/hildon-navigator-panel.[ch]:
	- Create the tasknavigator and defer the plugin loading

2006-10-19  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.97

2006-10-19  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Task Navigator re-loads (and re-composites?) all
    of its visible app switcher icons when new application is started
	* hn-app-item.c: Added cache for the icons pixbuf
	* hn-app-menu-item-c: Use this cache
	Fixes: NB#42971

2006-10-19  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-switcher.c: Rebuild the menu
	  if the thumbable status changed
	* hildon-navigator/hn-app-menu-item.c: Hopefully fixed
	  the size_request for good

2006-10-19  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.96

2006-10-19  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/backgroun-manager.c: Use SIGKILL to kill the child,
	to avoid interfering with our own signal handler.

2006-10-19  Moises Martinez <moises.martinzes@nokia.com>

	* libhildonmenu/libhildonmenu.c: (read_menu_conf) Initialized two pointer to
	null. They were crashing desktop on parsing others menu's bogus XML.

2006-10-19  Tomas Junnonen <tomas.junnonen@nokia.com>
