@@ -1,3 +1,8 @@
+2006-10-24  Moises Martinez <moises.martinzes@nokia.com>
+
+	* hildon-status-bar/hildon-status-bar-main.c: Reverted
+ 	behavior on event DBus signal when destroying plugin itself.
+
 2006-10-24  Johan Bilien <johan.bilien@nokia.com>
 
 	* hildon-navigator/hn-app-switcher.c: Removed shutdown_ind DBus
